--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,80 @@
-/* место для вашего кода */
+.header{
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    width: 1100px;
+    height: 293px;
+    align-items: center;
+    
+    }
+
+.header_logo{
+    display: block;
+    width: 148px;
+height: 105px;
+}
+
+.header_menu-list{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+}
+.header_menu-link{
+    color: black;
+    font-family: Raleway;
+font-size: 18px;
+font-weight: 400;
+line-height: 21.13px;
+font-style: normal;
+text-underline-position: from-font;
+text-decoration-skip-ink: none;
+}
+
+.addres{
+    display: flex;
+    flex-direction: column;
+    justify-self:end;
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+    font-weight: 400px;
+    line-height: 24.3px;
+    font-style: normal;
+    text-underline-position: from-font;
+    color: #000;
+
+    
+}
+
+.cover{
+background-image: url(cover.jpg);
+width: 1100px;
+height: 757px;
+gap: 0px;
+opacity: 0.6px;
+
+}
+
+.lots{
+padding-top: 180px;
+width: 1052px;
+height: 723px;
+top: 1230px;
+left: 24px;
+gap: 0px;
+opacity: 0px;
+
+}
+
+.about{
+padding-top: 120px;
+padding-bottom: 180px;
+padding-left: 24px;
+padding-right: 24px;
+}
+
+.card{
+
+}
+
+.footer{
+
+}
