--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ text-underline-position: from-font;
 text-decoration-skip-ink: none;
 }
 
-.addres{
+.address{
     display: flex;
     flex-direction: column;
     justify-self:end;
