--- a/styles/style.css
+++ b/styles/style.css
@@ -1,80 +1,104 @@
-.header{
-    display: grid;
-    grid-template-columns: 1fr min-content 1fr;
-    width: 1100px;
-    height: 293px;
-    align-items: center;
-    
-    }
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  width: 1100px;
+height: 293px;
+padding: 0;
 
-.header_logo{
-    display: block;
-    width: 148px;
+}
+
+.container_header_logo{
+  display: flex;
+  width: 148px;
 height: 105px;
-}
-
-.header_menu-list{
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-}
-.header_menu-link{
-    color: black;
-    font-family: Raleway;
-font-size: 18px;
-font-weight: 400;
-line-height: 21.13px;
-font-style: normal;
-text-underline-position: from-font;
-text-decoration-skip-ink: none;
-}
-
-.address{
-    display: flex;
-    flex-direction: column;
-    justify-self:end;
-    font-family: Raleway, sans-serif;
-    font-size: 18px;
-    font-weight: 400px;
-    line-height: 24.3px;
-    font-style: normal;
-    text-underline-position: from-font;
-    color: #000;
-
-    
-}
-
-.cover{
-background-image: url(cover.jpg);
-width: 1100px;
-height: 757px;
+top: 1.16px;
+left: 9.03px;
 gap: 0px;
-opacity: 0.6px;
-
+opacity: 0px;
 }
 
-.lots{
-padding-top: 180px;
-width: 1052px;
-height: 723px;
-top: 1230px;
-left: 24px;
+.header_logo-img{
+    display: block;
+    width: 129.11px;
+height: 104.65px;
+top: 1.16px;
+left: 9.03px;
 gap: 0px;
 opacity: 0px;
 
 }
 
-.about{
-padding-top: 120px;
-padding-bottom: 180px;
-padding-left: 24px;
-padding-right: 24px;
+.header_menu-item .header_menu-item_active{
+    text-decoration: none;
 }
 
-.card{
+
+
+.header_menu-list {
+  display: flex;
+  flex-direction: row;
+  list-style: circle;
+}
+.header_menu-link{
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21.13px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color:black;
+}
+
+
+.header_adress {
+  display: flex;
+  flex-direction: column;
+  
+  color: #000;
+}
+
+.cover {
+  background-image: url(cover.jpg);
+  width: 1100px;
+  height: 757px;
+  gap: 0px;
+  opacity: 0.6px;
+}
+
+.cover_title{
+    font-family: Raleway;
+font-size: 100px;
+font-weight: 700;
+line-height: 115px;
+letter-spacing: 0.3em;
+text-align: left;
+text-underline-position: from-font;
+text-decoration-skip-ink: none;
 
 }
 
-.footer{
+.lots {
+  padding-top: 180px;
+  width: 1052px;
+  height: 723px;
+  top: 1230px;
+  left: 24px;
+  gap: 0px;
+  opacity: 0px;
+}
 
+.about {
+  padding-top: 120px;
+  padding-bottom: 180px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.card {
+}
+
+.footer {
+    display: grid;
 }
