--- a/styles/style.css
+++ b/styles/style.css
@@ -13,13 +13,12 @@
   justify-content: center;
   width: auto;
   margin: auto;
-  
 }
 
 .header_logo-image{
   display: block;
   width: 148px;
-height: 105px;
+  height: 105px;
 }
 
  .header_links-item_no-bullit{
@@ -39,7 +38,7 @@ height: 105px;
   justify-self: center;
   flex-direction: row;
   column-gap: 9%;
-  list-style: circle;
+  list-style-type: circle;
   font-size: 18px;
 
 }
@@ -51,57 +50,64 @@ height: 105px;
   text-align: left;
   white-space: nowrap;
   text-underline-position: from-font;
-  text-decoration: none;
+  text-decoration:none;
   color: #000;
 }
 
 .address {
   display: flex;
   flex-direction: column;
-  justify-self: end;
+  max-width: 240px;
+  font-family: Raleway;
   font-size: 18px;
   font-style: normal;
-line-height: 1.35;
-text-underline-position:under;
+  line-height: 1.35;
+  text-underline-position:under;
   color: #000;
-  max-width: 240px;
+}
+/*.address a{
+border-bottom: 1px solid;
+text-decoration: none;*/
+.header_address{
+  justify-self: end;
 }
 
-.cover {
-  display: grid;
+.cover{
   position: relative;
-  flex-direction: column;
-  background-image: url(.images/cover.jpg);
+  background-image: url(../images/cover.jpg);
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 757px;
+  padding: 165px 50px 50px 50px;
+  margin-bottom: 180px;
+  max-height: 757px;
   z-index: 1;
-  
 }
 
 .overlay{
-position: absolute;
-background-color:#000;
-opacity: 60%;
-z-index: 2;
+  position: absolute;
+  background-color:#000;
+  inset: 0;
+  opacity: 60%;
+  z-index: 2;
 }
 
-.cover_title {
-  display: grid;
-  grid-template-rows: repeat(3, auto);
- position: absolute;
- justify-self:center;
- width: 1000px;
-height: 385px;
-margin-top: 165px;
-margin-left: 50px;
- z-index: 3;
- font-family: Raleway;
-font-size: 100px;
-font-weight: 700;
-line-height: 115px;
-letter-spacing: 0.3em;
-color:#FFFFFF;
+.cover_title{
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  margin-bottom: 106px;
+  max-height: 385px;
+  gap: 20px;
+  font-family: Raleway;
+  text-transform: uppercase;
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 115px;
+  letter-spacing: 0.3em;
+  line-height: 1.15;
+  color:#FFFFFF;
+  z-index: 2;
 }
 
 .aligned_text{
@@ -123,7 +129,8 @@ color:#FFFFFF;
 
 .cover_discription{
   display: flex;
-  position: absolute;
+  position: relative;
+  margin-bottom: 61px;
   width: 1000px;
   justify-content: space-between;
   z-index: 2;
@@ -136,33 +143,139 @@ color:#FFFFFF;
   line-height: 28px;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
+  word-spacing: 28px;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }
 
-.button{}
+.bet_button{
+  background-color: transparent;
+  border: 1px solid #FFFFFF;
+  max-width: 256px;
+  padding: 12px 32px 11px 31px;
+  font-family: Raleway;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 25.83px;
+  text-align: center;
+  text-transform: uppercase;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #FFFFFF;
+  z-index: 3;
+}
 
+.lots{
+  padding-top: 74px;
+  padding-bottom: 53px;
+  margin: 0px 24px 120px 24px;
+  max-height: 723px;
+}
 
+.lots_heading{
+  padding: 0px 0px 27px 40px;
+  text-transform: uppercase;
+  font-size: 40px;
+  font-weight: 700;
+  color: #000;
+}
 
-.lots {
+.lots_card-list{
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin: 180px 24px 120px 24px;
- padding-top: 74px;
- padding-bottom: 53px;
+  grid-template-columns: repeat(3,1fr);
+  justify-content: space-between;
+  gap: 25px;
+  list-style-type: none;
+  
+}
+.lots_card-list-item{
+  max-width: 334px;
+  min-height: 554px;
+  list-style-type: none; 
 }
 
+.card{
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: space-between;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  max-width: 334px;
+  max-height: 596px;
+  height: 100%;
+  padding: 48px 40px;
+  text-decoration: none;
+}
+
+.card_type_film{
+  background-image: url(../images/card-lot-01.jpg);
+  height: 100%;
+}
+
+.card_type_book{
+  background-image: url(../images/card-lot-02.jpg);
+  height: 100%;
+}
+
+.card_type_picture{
+  background-image: url(../images/card-lot-03.jpg);
+  height: 100%;
+}
+
+.card_title{
+  font-family: Raleway;
+  text-transform: uppercase;
+  text-decoration: underline;
+  text-align: left;
+  z-index: 3;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 120%;
+  color: #FFFFFF;
+}
+
+.card_text{
+  font-family: Raleway;
+  line-height: 24px;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 120%;
+  color: #FFFFFF;
+  z-index: 2;
+}
+
+.card_link{
+  text-decoration: none;
+  height: 100%;
+}
+
+.lots_link{
+  display: block;
+  margin: 30px 0px 0px 40px;
+  font-family: Raleway;
+  text-decoration: underline;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  color: #000;
+}
 
 .about {
   display: grid;
-align-items: center;
+  align-items: start;
   grid-template-columns: 334px 1fr;
-  
-  margin: 0 24px 180px 24px;
+  margin: 0px 24px 180px 24px;
 }
 
 .logo_about-column{
-  display: flex; 
+    display: flex; 
     justify-content: center;
-  
+    align-items: flex-end;
+    padding-top: 35px;
 }
 
 .about_logo-container{
@@ -181,33 +294,51 @@ align-items: center;
   height: 114px;
   }
 
-  .about_first-paragraph{
-  font-family: Raleway;
-font-size: 20px;
-font-weight: 400;
-line-height: 24px;
-text-align: left;
-text-underline-position: from-font;
-text-decoration-skip-ink: none;
-margin-bottom: 24px;
+.about_text{
+    padding-left: 25px;
   }
 
+  .about_title{
+  margin-top: 136px;
+  padding-bottom: 100px;
+  font-family: Raleway;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46.96px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
 
+  }
+
+.about_paragraph{
+  font-family: Raleway;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  }
+
+.first_paragraph{
+  margin-bottom: 24px;
+  }
 
 .footer {
   display: grid;
   grid-template-columns: repeat(3,1fr);
-align-items: center;
+  align-items:start;
   padding: 0px 50px 82px 50px;
 }
 
 .footer_menu {
   display: flex;
-  justify-self: center;
+  align-self: center;
   align-items: center;
   flex-direction: column;
   column-gap: 9%;
-  list-style: none;
+  list-style-type: none;
   font-size: 18px;
 }
 
@@ -221,32 +352,23 @@ align-items: center;
 
  .footer_social{
   display: flex;
+  flex-direction: row;
   justify-self: end;
-  align-items: center;
+  align-items: start;
   justify-content: space-between;
-  column-gap: 9%;
-  list-style: none;
+  row-gap: 9%;
+  list-style-type: none;
   font-size: 18px;
- }
-
- .footer_social-container{
-  display: flex;
   max-width: 240px;
- } 
+}
 
- .footer_social-list-item_no_bullit{
+.footer_social-list-item_no_bullit{
   margin: 0 10px;
  }
-
- .footer_social-list{
-  display: flex;
-  list-style-type: none;
-  
-
- }
-
+ 
  .footer_social-icon{
-display: block;;
-width: 48px;
-height: 48px;
+  display: block;
+  width: 48px;
+  height: 48px;
  }
+
