--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
   font-style: normal;
 }
 
-.header_logo-container{
+.header__logo-container{
   display: flex;
   justify-content: center;
   width: auto;
@@ -21,55 +21,52 @@
   height: 105px;
 }
 
- .header_links-item_no-bullit{
-  list-style-type: none;
- }
-
- .header_links-list{
-  list-style-type: none;
- }
-
-.header_links_active {
-  text-decoration: none;
+.menu{
+display: flex;
 }
 
-.header_menu {
-  display: flex;
+.header_menu{
   justify-self: center;
   flex-direction: row;
-  column-gap: 9%;
+  column-gap: 8%;
   list-style-type: circle;
-  font-size: 18px;
-
+  margin-right: 4px;
 }
-.header_link {
+
+.menu__links-item{
+  list-style-type: none;
+}
+
+.menu__links-item_no-bullit{
+  list-style-type: none;
+}
+
+.menu__link{
   font-family: Raleway;
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
-  text-align: left;
-  white-space: nowrap;
-  text-underline-position: from-font;
-  text-decoration:none;
+  text-underline-position: under; 
   color: #000;
+}
+  
+.menu__link_active{
+  list-style-type: none;
 }
 
 .address {
-  display: flex;
-  flex-direction: column;
   max-width: 240px;
   font-family: Raleway;
   font-size: 18px;
   font-style: normal;
-  line-height: 1.35;
+  line-height: 135%;
   text-underline-position:under;
   color: #000;
-}
-/*.address a{
-border-bottom: 1px solid;
-text-decoration: none;*/
+} 
+
 .header_address{
   justify-self: end;
+  margin-right: 36px;
 }
 
 .cover{
@@ -79,7 +76,7 @@ text-decoration: none;*/
   background-size: cover;
   background-repeat: no-repeat;
   padding: 165px 50px 50px 50px;
-  margin-bottom: 180px;
+  margin-bottom: 107px;
   max-height: 757px;
   z-index: 1;
 }
@@ -92,7 +89,7 @@ text-decoration: none;*/
   z-index: 2;
 }
 
-.cover_title{
+.cover__title{
   display: flex;
   position: relative;
   flex-direction: column;
@@ -103,9 +100,8 @@ text-decoration: none;*/
   text-transform: uppercase;
   font-size: 100px;
   font-weight: 700;
-  line-height: 115px;
   letter-spacing: 0.3em;
-  line-height: 1.15;
+  line-height: 115%;
   color:#FFFFFF;
   z-index: 2;
 }
@@ -121,20 +117,25 @@ text-decoration: none;*/
 
 .aligned_text_center{
   text-align: center;
+  padding-left: 30px;
 }
 
 .aligned_text_right{
   text-align: right;
+  margin-left: auto;
 }
 
-.cover_discription{
-  display: flex;
-  position: relative;
-  margin-bottom: 61px;
-  width: 1000px;
-  justify-content: space-between;
-  z-index: 2;
-}
+
+
+.cover__discription{
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    width: 1000px;
+    z-index: 2;
+  }
+ 
 
 .discription_text{
   font-family: Raleway;
@@ -143,7 +144,7 @@ text-decoration: none;*/
   line-height: 28px;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
-  word-spacing: 28px;
+  word-spacing: 19px;
   text-transform: uppercase;
   color: #FFFFFF;
 }
@@ -152,12 +153,13 @@ text-decoration: none;*/
   background-color: transparent;
   border: 1px solid #FFFFFF;
   max-width: 256px;
-  padding: 12px 32px 11px 31px;
+  padding: 11px 32px 11px 31px;
   font-family: Raleway;
   font-size: 22px;
   font-weight: 500;
-  line-height: 25.83px;
+  line-height: 117%;
   text-align: center;
+  text-wrap: nowrap;
   text-transform: uppercase;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
@@ -168,11 +170,11 @@ text-decoration: none;*/
 .lots{
   padding-top: 74px;
   padding-bottom: 53px;
-  margin: 0px 24px 120px 24px;
+  margin: 0px 24px 195px 24px;
   max-height: 723px;
 }
 
-.lots_heading{
+.lots__heading{
   padding: 0px 0px 27px 40px;
   text-transform: uppercase;
   font-size: 40px;
@@ -180,7 +182,7 @@ text-decoration: none;*/
   color: #000;
 }
 
-.lots_card-list{
+.lots__card-list{
   display: grid;
   grid-template-columns: repeat(3,1fr);
   justify-content: space-between;
@@ -188,9 +190,9 @@ text-decoration: none;*/
   list-style-type: none;
   
 }
-.lots_card-list-item{
+.lots__card-list-item{
   max-width: 334px;
-  min-height: 554px;
+  min-height: 596px;
   list-style-type: none; 
 }
 
@@ -203,40 +205,42 @@ text-decoration: none;*/
   background-position: center;
   background-repeat: no-repeat;
   max-width: 334px;
-  max-height: 596px;
   height: 100%;
   padding: 48px 40px;
   text-decoration: none;
 }
 
-.card_type_film{
+.card__type_film{
   background-image: url(../images/card-lot-01.jpg);
   height: 100%;
 }
 
-.card_type_book{
+.card__type_book{
   background-image: url(../images/card-lot-02.jpg);
   height: 100%;
 }
 
-.card_type_picture{
+.card__type_picture{
   background-image: url(../images/card-lot-03.jpg);
   height: 100%;
 }
 
-.card_title{
+.card__title{
   font-family: Raleway;
   text-transform: uppercase;
   text-decoration: underline;
+  text-underline-offset: auto;
+  text-decoration-style: solid;
+  text-decoration-thickness: auto;
   text-align: left;
-  z-index: 3;
   font-size: 22px;
   font-weight: 700;
   line-height: 120%;
   color: #FFFFFF;
+  z-index: 3;
 }
 
-.card_text{
+.card__text{
   font-family: Raleway;
   line-height: 24px;
   text-align: left;
@@ -247,20 +251,20 @@ text-decoration: none;*/
   z-index: 2;
 }
 
-.card_link{
+.card__link{
   text-decoration: none;
   height: 100%;
 }
 
-.lots_link{
+.lots__link{
   display: block;
   margin: 30px 0px 0px 40px;
   font-family: Raleway;
-  text-decoration: underline;
+  text-underline-position: under;
   text-align: left;
   font-size: 20px;
   font-weight: 400;
-  line-height: 23.48px;
+  line-height: 117%;
   color: #000;
 }
 
@@ -268,17 +272,17 @@ text-decoration: none;*/
   display: grid;
   align-items: start;
   grid-template-columns: 334px 1fr;
-  margin: 0px 24px 180px 24px;
+  margin: 0px 24px 179px 24px;
 }
 
-.logo_about-column{
+.about__logo-column{
     display: flex; 
     justify-content: center;
     align-items: flex-end;
     padding-top: 35px;
 }
 
-.about_logo-container{
+.about__logo-container{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -288,34 +292,34 @@ text-decoration: none;*/
   height: 240px;
 }
 
-.about_logo-image{
+.about__logo-image{
   display: block;
   width: 148px;
   height: 114px;
   }
 
-.about_text{
+.about__text{
     padding-left: 25px;
   }
 
-  .about_title{
+  .about__title{
   margin-top: 136px;
   padding-bottom: 100px;
   font-family: Raleway;
   font-size: 40px;
   font-weight: 700;
-  line-height: 46.96px;
+  line-height: 117%;
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
 
   }
 
-.about_paragraph{
+.about__paragraph{
   font-family: Raleway;
   font-size: 20px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 120%;
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
@@ -332,43 +336,29 @@ text-decoration: none;*/
   padding: 0px 50px 82px 50px;
 }
 
-.footer_menu {
-  display: flex;
+.footer_menu{
   align-self: center;
   align-items: center;
   flex-direction: column;
   column-gap: 9%;
   list-style-type: none;
-  font-size: 18px;
 }
-
-.footer_links-item_no-bullit{
-  list-style-type: none;
- }
 
  .footer_address{
   justify-self: start;
+  padding-left: 2px;
+  padding-bottom: 2px;
  }
 
- .footer_social{
+ .footer_social {
   display: flex;
-  flex-direction: row;
-  justify-self: end;
-  align-items: start;
   justify-content: space-between;
-  row-gap: 9%;
+  justify-self: end;
   list-style-type: none;
-  font-size: 18px;
   max-width: 240px;
-}
-
-.footer_social-list-item_no_bullit{
-  margin: 0 10px;
+  max-height: 48px;
+  gap: 48px;
  }
- 
- .footer_social-icon{
-  display: block;
+ .footer__social_link {
   width: 48px;
-  height: 48px;
  }
-
